Fix layout issues on large screens

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -5,7 +5,7 @@
     width: 100%;
     background-color: $text-accent-bright;
     border: 0;
-    border-radius: 1em;
+    border-radius: 0.5em;
     padding: 1em 2em;
     margin-bottom: 1.2em;
     font-weight: $fw-bold;
