--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -2,7 +2,7 @@
 
 .card {
     background-color: white;
-    width: min(90%, rem(400px));
+    width: min(90%, rem(410px));
     border-radius: rem(16px);
     font-weight: $fw-normal;
     color: $text-color;
@@ -15,13 +15,13 @@
     &__body {
         width: 85%;
         margin: 0 auto;
-        padding-bottom: 2rem;
+        padding-bottom: 2.5rem;
         text-align: center;
     }
 
     &__heading {
         color: $text-accent-dark;
-        font-size: rem(24px);
+        font-size: rem(26px);
         font-weight: $fw-x-bold;
         margin-top: 1.5em;
         margin-bottom: 0.7em;
@@ -34,12 +34,12 @@
         border-radius: 1em;
         background-color: $bg-faded-grey;
         margin: rem(30px) 0;
-        padding: 1em 0.8em;
+        padding: 1.3em 0.8em;
     }
 
     &__sub-plan {
         display: flex;
-        gap: rem(16px);
+        gap: rem(18px);
     }
 
     &__sub-duration {
@@ -48,6 +48,7 @@
     }
 
     &__sub-change {
+        font-size: rem(14px);
         text-decoration: underline;
         color: $text-accent-bright;
         font-weight: $fw-bold;
